- basic layout done - structure of files defined - dialogs Login, Config and Rules partially done

--- a/WebContent/css_files/loginStyle.css
+++ b/WebContent/css_files/loginStyle.css
@@ -6,32 +6,11 @@ p.cancelButton{
     float: left;
 }
 
-div#modalLogin{
+div#dialogLogin{
     display: none; /* Hidden by default */
     width: 170px;
     height: 205px;
-    position: relative;
-    top: 50%;
-
-    background-color: darkseagreen;
-
+    margin-left: 60px;
+    background-color: darkslategrey;
     padding: 10px;
-}
-
-
-
-
-/* The Close Button */
-.close {
-    color: darkslategrey;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
 }
