- board size now can be changed at config

--- a/WebContent/css_files/configStyle.css
+++ b/WebContent/css_files/configStyle.css
@@ -6,5 +6,8 @@ div#dialogConfig{
     background-color: darkslategrey;
     padding: 10px;
     position:relative
+}
 
+.custom-radiobutton{
+    margin-left: 15px;
 }
