- Computer plays (random) - Alerts of turns

--- a/WebContent/css_files/styles.css
+++ b/WebContent/css_files/styles.css
@@ -69,6 +69,11 @@ input.playable{
     background-color: darkgrey;
 }
 
+.start:disabled,
+.start-button[disabled] {
+    background-color: darkgrey;
+}
+
 .alternative-button-small{
     width: auto;
     height: 25px;
