--- a/WebContent/css_files/styles.css
+++ b/WebContent/css_files/styles.css
@@ -10,8 +10,12 @@ body {
     margin: 40px;
 }
 
-table{
+table.boardtable{
     color: darkslategrey;
+}
+
+table{
+    color: darkkhaki;
 }
 
 .page-title {
@@ -69,7 +73,7 @@ input.playable{
     background-color: darkgrey;
 }
 
-.start:disabled,
+.start-button:disabled,
 .start-button[disabled] {
     background-color: darkgrey;
 }
@@ -108,7 +112,7 @@ input.playable{
     bottom:   2px;
 }
 
-div.window{
+.window{
     margin-bottom: 15px;
 }
 
